# incolume.py.ft-programadoraventureiro-8573

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
incolume/py/ft_programadoraventureiro_8573/: pedido.py
incolume/py/ft_programadoraventureiro_8573/partials/: app_bar.py  button.py  date_picker.py  navigation_drawer.py
incolume/py/ft_programadoraventureiro_8573/views/: home_view.py  pedido_view.py  store_view.py
